--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
-# Auto detect text files and perform LF normalization
+# Normaliza finales de linea y mantiene texto
 * text=auto
+*.java text eol=lf
+*.md text eol=lf
+*.sh text eol=lf
